--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -18,7 +18,7 @@ html {
 body {
 	margin: 0;
 	text-align: left;
-	background-color: #fff;
+	background-color: #000000cc;
 }
 
 [tabindex='-1']:focus:not(:focus-visible) {
