Fix name of components on sidebar module

--- a/src/app/layout/sidebar/components/sidebar-header/sidebar-header-component.scss
+++ b/src/app/layout/sidebar/components/sidebar-header/sidebar-header-component.scss
@@ -16,5 +16,11 @@
   &_name {
     font-weight: bold;
     font-size: pxToRem(25px);
+    opacity: 0;
+    transition: opacity 1s ease;
+
+    &.expanded {
+      opacity: 1;
+    }
   }
 }
