--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-sidebar />
-
-<main class="main-content">
-    <router-outlet />
-</main>
+<section class="container">
+    <app-sidebar (toggleChange)="onSidebarToggle($event)"></app-sidebar>
+    <main class="main-content" [class]="{'main-content-expanded': isSidebarExpanded}">
+      <router-outlet></router-outlet>
+    </main>
+</section>
