--- a/src/app/layout/sidebar/components/sidebar-header/sidebar-header-component.html
+++ b/src/app/layout/sidebar/components/sidebar-header/sidebar-header-component.html
@@ -10,6 +10,6 @@
     />
   </a>
   @if (isExpanded()) {
-  <span class="sidebar__header_name">Jhon Toro</span>
+  <span class="sidebar__header_name" [class]="{ expanded : isExpanded()}">Jhon Toro</span>
   }
 </section>
