Added some details in the transition Sidebar

--- a/src/app/layout/sidebar/components/sidebar-nav/sidebar-nav-component.html
+++ b/src/app/layout/sidebar/components/sidebar-nav/sidebar-nav-component.html
@@ -13,9 +13,7 @@
         height="25"
         alt="{{ item.label }} icon"
       />
-      @if (isExpanded()) {
-      <span>{{ item.label }}</span>
-      }
+      <span [class.expanded]="isExpanded()">{{ item.label }}</span>
     </a>
   </li>
   }
