--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -7,12 +7,15 @@
 }
 
 html {
-	font-family: sans-serif;
 	line-height: 1.15;
 	-ms-overflow-style: scrollbar;
 	-webkit-text-size-adjust: 100%;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	scroll-behavior: smooth;
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
 }
 
 body {
