--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="container">
     <app-sidebar (toggleChange)="onSidebarToggle($event)"></app-sidebar>
-    <main class="main-content" [class]="{'main-content-expanded': isSidebarExpanded}">
+    <main class="main-content" [class.main-content-expanded]="isSidebarExpanded()">
       <router-outlet></router-outlet>
     </main>
 </section>
