Added hero component

--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -1,1 +1,9 @@
-<p>hero works!</p>
+<section class="hero">
+    <h1 class="hero-title">¡ Hola, soy David !</h1>
+    <h2 class="hero-description">Desarrollador de software</h2>
+    <app-button
+      text="Sobre mí"
+      type="submit"
+      aria-label="Ir al apartado sobre mí"
+    />
+</section>
