--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -4,3 +4,8 @@
     padding: pxToRem(80px);
     background-image: url('https://res.cloudinary.com/dxspvj1rj/image/upload/v1746672887/background_qifiua.jpg');
 }
+
+.hero-section {
+    background-color: white;
+    padding: pxToRem(80px);
+}
