--- a/src/app/shared/components/input/input.component.scss
+++ b/src/app/shared/components/input/input.component.scss
@@ -20,7 +20,7 @@
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
     &:focus {
       outline: none;
-      border-color: #007bff;
+      border-color: #6e07f3;
       box-shadow: 0 0 pxToRem(5px) rgba(0, 123, 255, 0.3);
     }
 
