--- a/src/app/shared/components/textarea/textarea.component.scss
+++ b/src/app/shared/components/textarea/textarea.component.scss
@@ -24,7 +24,7 @@
     
     &:focus {
       outline: none;
-      border-color: #007bff;
+      border-color: #6e07f3;
       box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
     }
 
