Finished projects component

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,9 @@
 <section class="hero-section">
     <app-hero/>
 </section>
+<section class="projects-section">
+    <app-projects/>
+</section>
 <section class="contact-section">
     <app-contact-form/>
 </section>
