Finished skills component

--- a/src/app/features/home/components/contact-form/contact-form.component.html
+++ b/src/app/features/home/components/contact-form/contact-form.component.html
@@ -1,4 +1,4 @@
-<section class="contact-form-container">
+<section id="contact" class="contact-form-container">
   <h2 class="contact-form-container-title">Contacto</h2>
   <form class="contact-form-container-form" [formGroup]="contactForm" (ngSubmit)="onSubmit()" role="form">
     <p class="visually-hidden">Por favor, envía tu mensaje y me pondré en contacto contigo lo antes posible.</p>
