--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -1,9 +1,23 @@
 <section class="hero">
-    <h1 class="hero-title">¡ Hola, soy David !</h1>
-    <h2 class="hero-description">Desarrollador de software</h2>
-    <app-button
-      text="Sobre mí"
-      type="submit"
-      aria-label="Ir al apartado sobre mí"
-    />
+  <h1 class="hero-title">¡ Hola, soy David !</h1>
+  <h2 class="hero-description">Desarrollador de software</h2>
+  <p class="hero-description-myself">
+    Un placer conocerte Un apasionado desarrollador Frontend, Backend, dedicado
+    a convertir ideas en experiencias digitales cautivadoras. Con un enfoque
+    meticuloso en todo lo que esté a mi alcance, mi objetivo es crear soluciones
+    innovadoras tanto Frontend como Backend que superen las expectativas de los
+    clientes.
+  </p>
+  <img
+    class="hero-image"
+    src="https://res.cloudinary.com/dxspvj1rj/image/upload/v1746678649/image_fqaohu.png"
+    alt="Hero image"
+  />
+  <app-button
+    text="Mis Proyectos"
+    type="submit"
+    aria-label="Ir al apartado Mis Proyectos"
+    target="_self"
+    link="#projects"
+  />
 </section>
