--- a/src/app/features/home/components/projects/projects.component.html
+++ b/src/app/features/home/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-<section class="projects-section">
+<section id="projects" class="projects-section">
   <h2 class="section-title">Mis Proyectos</h2>
 
   <section class="projects-container">
@@ -17,6 +17,7 @@
       <app-button
         text="Ver proyecto"
         [link]="project.link"
+        target="_blank"
       />
     </article>
     }
