--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,9 @@
 <section class="hero-section">
     <app-hero/>
 </section>
+<section class="skills-section">
+    <app-skills/>
+</section>
 <section class="projects-section">
     <app-projects/>
 </section>
