--- a/src/app/layout/sidebar/components/sidebar-settings/sidebar-settings-component.html
+++ b/src/app/layout/sidebar/components/sidebar-settings/sidebar-settings-component.html
@@ -1,6 +1,6 @@
 <section class="sidebar__settings">
   @for (setting of settings(); track $index) { 
-    @if (setting.type === 'toggle') {
+    <!-- @if (setting.type === 'toggle') {
       <li class="sidebar__nav_item">
         <img [ngSrc]="setting.icon" width="20" height="20" alt="Dark mode icon" />
         <span [class.expanded]="isExpanded()">{{ setting.label }}</span>
@@ -10,7 +10,7 @@
           [checked]="setting.value!"
         />
       </li>
-    }
+    } -->
     @if (setting.type === 'collapse') {
       <li class="sidebar__nav_item toggle" (click)="onCollapseClick()">
         <img
