--- a/src/app/features/home/components/hero/hero.component.scss
+++ b/src/app/features/home/components/hero/hero.component.scss
@@ -19,4 +19,19 @@
     &-description {
         text-align: center;
     }
+
+    &-image {
+        width: 100%;
+
+        @include media-xl(){
+            width: pxToRem(450px);
+        }
+        @include media-lg(){
+            width: pxToRem(450px);
+        }
+    }
+
+    &-description-myself{
+        max-width: pxToRem(620px);
+    }
 }
