--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,7 +1,5 @@
 @if (isMobile && !isMobileVisible()) {
-  <button class="mobile-toggle" (click)="toggleSidebar()">
-    ☰
-  </button>
+  <img src="https://res.cloudinary.com/dxspvj1rj/image/upload/v1746680891/bars-solid_yuhsja.svg" alt="Menu toggle" class="mobile-toggle" (click)="toggleSidebar()"/>
 }
 
 @if (isMobile && isMobileVisible()) {
